Fri Nov  6 12:03:35 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Connector_T.cpp:
        * connectors/dds4ccm/impl/ndds/DataWriterListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/DataWriterListener_T.h:
          Moved this listener out of the RTI specific namespace, it
          is a vendor indepedent template

Fri Nov  6 12:56:49 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Builtin_Writer_T.h:
        * connectors/dds4ccm/impl/ndds/Builtin_Writer_T.cpp:
        * connectors/dds4ccm/impl/ndds/Getter_T.h:
        * connectors/dds4ccm/impl/ndds/Getter_T.cpp:
        * connectors/dds4ccm/impl/ndds/Reader_T.h:
        * connectors/dds4ccm/impl/ndds/Reader_T.cpp:
        * connectors/dds4ccm/impl/ndds/Updater_T.h:
        * connectors/dds4ccm/impl/ndds/Updater_T.cpp:
        * connectors/dds4ccm/impl/ndds/Writer_T.h:
        * connectors/dds4ccm/impl/ndds/Writer_T.cpp:
          Renamed template argument BASE into CCM_TYPE.

Fri Nov  6 11:51:35 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Connector_T.cpp:
        * connectors/dds4ccm/impl/ndds/Connector_T.h:
        * connectors/dds4ccm/impl/ndds/DataWriterListener.h:
        * connectors/dds4ccm/impl/ndds/DataWriterListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/DataWriterListener_T.h:
          Added DataWriterListener which invokes on the ConnectorStatusListener

        * connectors/dds4ccm/impl/ndds/DataReaderListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/DataReaderListener_T.h:
          Removed listener member, not used

Fri Nov  6 12:28:42 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReaderHandler_T.h:
        * connectors/dds4ccm/impl/ndds/DataReaderHandler_T.cpp:
        * connectors/dds4ccm/impl/ndds/DataReaderListener_T.h:
        * connectors/dds4ccm/impl/ndds/DataReaderListener_T.cpp: