@@ -1,3 +1,9 @@
+Fri Nov  6 13:05:57 UTC 2009  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/ndds/Builtin_Writer_T.h:
+        * connectors/dds4ccm/impl/ndds/Builtin_Writer_T.cpp:
+          Renamed NDDS_TYPE into DDS_TYPE.
+
 Fri Nov  6 12:03:35 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/impl/ndds/Connector_T.cpp:
